--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div id='application'>
         <h2>My game</h2>
 
-        <nav id='navigation'></nav>
+        <nav class='navigation'></nav>
 
         <section id='game' hidden>
             <h3>Выберите режим игры</h3>
